# Reddit-Kraken

./: .gitignore  AGENTS.md  CYCLES.md  ORIGINAL IDEA.md  PROMPT.md  README.md  STYLES.md  TECHSTACK.md  dev.sh  index.html  package-lock.json  package.json  session-ses_1eb7.md  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
features/: DOCKS.md
features/F01-authentication/: DOCKS.md
features/F02-reddit-data/: DOCKS.md
features/F03-for-you-feed/: DOCKS.md
features/F04-ai-system/: DOCKS.md
features/F05-cross-posting/: DOCKS.md
features/F06-ui-shell/: DOCKS.md
features/F07-filter-search/: DOCKS.md
features/F08-activity-center/: DOCKS.md
features/F09-saved-folders/: DOCKS.md
features/F1-reddit-fetching/: F1-docs.md  (+1 more)
genesis/: session-handoff-cycle0.md  session-handoff-s2.md
prompts/: F01-phase-1-auth-login.md  F02-phase-2-post-comment-fix.md  F02-phase-5-content-submission.md  F03-phase-4-for-you-feed.md  F04-phase-6-ai-evaluation.md  F05-phase-7-cross-posting.md  F06-phase-3-tabs-colors.md  F1-reddit-login-phase-1.md  F10-phase-1-folder-system.md  F2-phase-1-evaluation-pipeline.md  F4-phase-1-cross-post-editor.md
protocols/: P01 - Feature Audit.md  P02 - Reverse Engineering.md  P03 - Browser Agent.md  P04 - Visual Mockup.md  P05 - Find Skills.md  P06 - Create Skill From Task.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  reddit_api.rs  scheduler.rs
src-tauri/src/llm/: mod.rs  openai.rs
(+79 files in other folders)
